--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.6.9
+Version=2.7.0
 Author=Tanuki
 1=确定
 2=取消
@@ -103,7 +103,7 @@ Author=Tanuki
 13=验证视频文件哈希值(&V)
 14=创建 &md5 校验文件
 15=创建 &dvdid.xml
-16=Create log file
+16=创建日志文件
 17=RTF
 18=TXT
 
@@ -350,6 +350,6 @@ Author=Tanuki
 135=已确认中止请求
 136=正在复制...
 137=专业版功能
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+138=更新注册码
+139=你将创建一带有加密保护的镜像。此文件需加载到虚拟光驱中，然后用Xreveal解密后再使用!\n\n你要继续吗?
+140=删除未完成的文件？\n\n%s
