--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.6.9
+Version=2.7.0
 Author=VenusGirl (비너스걸)
 1=확인
 2=취소
@@ -50,7 +50,7 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=DVD 지원 사용(&E)
 4=소프트웨어 지역 코드 제거
 5=지역 코드 향상 보호 제거
 6=디스크 영역:
@@ -103,7 +103,7 @@ Author=VenusGirl (비너스걸)
 13=콘텐츠 해시 검증(&V)
 14=MD5 체크섬 파일 생성(&M)
 15=dvdid.xml 만들기(&D)
-16=Create log file
+16=로그 파일 만들기
 17=RTF
 18=TXT
 
@@ -197,13 +197,13 @@ Author=VenusGirl (비너스걸)
 8=업데이트 설치
 9=다운로드 - %s / %s
 10=최신입니다!\n\n%s은(는) 현재 사용 가능한 최신 버전입니다.
-11=업데이트 정보를 검색하는 동안 오류가 발생했습니다. 나중에 다시 시도해 주십시오.
-12=업데이트를 다운로드하는 동안 오류가 발생했습니다. 나중에 다시 시도해 주십시오.
+11=업데이트 정보를 검색하는 동안 오류가 발생했습니다. 나중에 다시 시도해 주세요.
+12=업데이트를 다운로드하는 동안 오류가 발생했습니다. 나중에 다시 시도해 주세요.
 
 [DIALOG_B]
 1=보내기
 3=%s에 문제가 발생하여 닫아야 합니다. 불편을 드려 죄송합니다.
-4=문제를 해결하고 이 소프트웨어를 개선하는 데 도움이 되도록 이 오류 보고서를 보내 주십시오.
+4=문제를 해결하고 이 소프트웨어를 개선하는 데 도움이 되도록 이 오류 보고서를 보내주세요.
 
 [DIALOG_C]
 0=피드백
@@ -226,18 +226,18 @@ Author=VenusGirl (비너스걸)
 11=디스크를 열기 전에 묻기
 12=다시 표시 안 함
 13=감지된 CD/DVD/Blu-ray 드라이브가 없습니다!\n\n가능한 이유:\n1. CD/DVD/Blu-ray 드라이브가 없습니다.\n\n2. 드라이브의 전원이 켜져 있지 않거나 제대로 연결되어 있지 않습니다.
-14=드라이버 버전이 일치하지 않음 %d.%d≠%d.%d.\n\nXreveal을 다시 설치하십시오.
-15=필요한 파일 중 일부가 없습니다.\n\nXreveal을 다시 설치하십시오.
+14=드라이버 버전이 일치하지 않음 %d.%d≠%d.%d.\n\nXreveal을 다시 설치하세요.
+15=필요한 파일 중 일부가 없습니다.\n\nXreveal을 다시 설치하세요.
 16=Xreveal이 설치되지 않았습니다.\n\n고치고 싶습니까?
 17=Xreveal을 사용하려면 컴퓨터를 다시 시작해야 합니다.\n\n지금 다시 시작하시겠습니까?
 18=%s이(가) 실행 중인 경우 Xreveal이 작동하지 않습니다.\n\n닫으시겠습니까?
 19=Xreveal 드라이브 %C를 검색 중:
 20=삽입한 디스크를 곧 사용할 수 있습니다. 잠시 기다려 주십시오!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=%C:!\n드라이브에 대한 Xreveal이 활성화되어 있지 않습니다\n복사 방지 디스크를 찢으려면 드라이브에 대한 Xreveal이 활성화되어 있어야 합니다.
+22=디렉터리 '%s'에 공간이 부족합니다!\n추가 %s이 필요합니다.
 23=복사 중 %s...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=작업이 성공적으로 완료되었습니다!
 26={%s}에 암호 해독 키가 없습니다
 27=BD+ FUT를 찾을 수 없습니다
 28=Xreveal에서 디스크를 열지 못했습니다(오류 코드): %s.
@@ -350,6 +350,6 @@ Author=VenusGirl (비너스걸)
 135=중단 요청 승인
 136=복사 중...
 137=Pro 기능
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+138=라이선스 업데이트
+139=보호된 이미지 파일을 생성합니다. 파일은 Xreveal이 설치되어 실행 중인 경우에만 가상 드라이브에서 읽을 수 있습니다!\n\n계속하시겠습니까?
+140=불완전한 파일을 삭제하시겠습니까?\n\n%s
