--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -1,7 +1,7 @@
-﻿[INFO]
+[INFO]
 ID=0x0411
 Name=Japanese(日本語)
-Version=2.5.6
+Version=2.7.0
 Author=Re*Index.(ot_inc)
 1=OK
 2=キャンセル
@@ -10,7 +10,7 @@ Author=Re*Index.(ot_inc)
 5=キャンセル(&C)
 
 [DIALOG_2]
-0=Xrevealについて
+0=Xreveal について
 
 [DIALOG_3]
 0=Xreveal
@@ -18,18 +18,18 @@ Author=Re*Index.(ot_inc)
 2=閉じる
 
 [DIALOG_4]
-0=Blu-rayのリージョンを指定
-4=%d秒後にこのウインドウが自動的に閉じられます。
+0=Blu-ray のリージョンを指定
+4=%d 秒後にこのウインドウが自動的に閉じられます。
 5=再度表示しない
 
 [DIALOG_5]
-0=DVDのリージョンを指定
-4=%d秒後にこのウインドウが自動的に閉じられます。
+0=DVD のリージョンを指定
+4=%d 秒後にこのウインドウが自動的に閉じられます。
 5=再度表示しない
 
 [DIALOG_6]
 0=設定
-3=デフォルト
+3=既定
 
 [DIALOG_7]
 0=状態
@@ -37,84 +37,84 @@ Author=Re*Index.(ot_inc)
 [DIALOG_8]
 0=共通
 3=言語:
-4=Windowsの起動時にXrevealを起動(&S)
-5=Keep this window always on &top
-6=システムトレイメニューにドライブを一覧表示(&L)
+4=Windowsの起動時に Xreveal を起動(&S)
+5=ウィンドウを常に手前に表示(&T)
+6=システムトレイメニューにドライブを一覧で表示(&L)
 7=自動的にアップデートを確認(&C)
-8=<a>Check now</a>
-9=Automatically &report open failures to improve Xreveal
+8=<a>今すぐ確認</a>
+9=エラーの発生時に自動で問題を報告(&R)
 
 [DIALOG_9]
 0=CD
-3=CD-DAプロテクトを解除
+3=CD-DA プロテクトを解除
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=DVD のサポートを有効化(&E)
 4=地域コードを削除
 5=リージョンコードエンハンスメントを解除
 6=地域コード:
 7=アナログプロテクトを解除
 8=ユーザー操作禁止を解除
-9=ARccOSを削除
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
+9=ARccOS を削除
+11=Xreveal で DVD を開くには <a>libdvdcss-2.dll</a> が必要です。
 
 [DIALOG_11]
 0=Blu-ray
-3=&Enable Blu-ray support
-4=BD+の解除
-5=Blu-ray地域コードを削除
+3=Blu-ray のサポートを有効化(&E)
+4=BD+ の解除
+5=Blu-ray 地域コードを削除
 6=ディスクのリージョン:
 7=リージョンコード:
 8=ユーザー操作禁止を解除
 9=コピーコントロール情報を削除
-10=BD-Liveを無効化
-11=3Dディスプレイをエミュレート
-12=Rename folders
-13=Using &AES hardware acceleration
-14=<a>Benchmark</a>
+10=BD-Live を無効化
+11=3D ディスプレイをエミュレートする
+12=フォルダーの名前を変更
+13=AES ハードウェアアクセラレーションを使用する(&A)
+14=<a>ベンチマーク</a>
 
 [DIALOG_12]
 0=KeyDB
-3=Xrevealはキー情報を含んでいないため、使用するには適切なファイルが必要です。詳しい情報は <a>こちら</a>。
-4=KeyDB.cfgの場所
-5=BD+フィックスアップテーブル(FUT)の位置
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+3=Xreveal はキー情報を含んでいないため、使用をするには適切なファイルが必要です。詳しい情報は <a>こちら</a>をご確認ください。
+4=KeyDB.cfg の場所
+5=BD+ フィックスアップテーブル (FUT) の位置
+6=オンラインでキーを探す(&F)
+7=Pro バージョンでは、<a>bd+.dll</a> を使用した BD+ の保護の削除をサポートしています。
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
-5=自動起動と自動再生を無効化(&D)
-8=UHD 用の LibreDrive を有効にする(&L)
+0=ドライブ
+3=Xreveal でスキャンするドライブを選択(&S)
+5=自動起動と自動再生を無効化する(&D)
+8=UHD 用の LibreDrive を有効化する(&L)
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
-16=Create log file
+1=開始
+3=ソース
+4=保存先
+5=オプション
+6=情報
+7=タイプ:
+8=容量:
+9=プロテクト:
+10=空き容量:
+11=容量:
+12=プロテクトを保持する(&K)
+13=コンテンツハッシュを確認する(&V)
+14=MD5 チェックサムファイルを作成する(&M)
+15=dvdid.xml を作成する(&D)
+16=ログファイルを作成する
 17=RTF
 18=TXT
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=ソース:
+4=保存先:
+6=経過時間:
+7=残り時間:
+8=リードエラー:
+9=リードレート:
 
 [DIALOG_16]
 0=プレーヤーのリージョン
@@ -132,42 +132,42 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_19]
 0=ホットキー
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=Xreveal の実行中にシステム全体でいくつかのアクションをトリガーするためのホットキーを作成できます。
+4=Xreveal をシステムトレイメニューに表示:
+5=設定ウィンドウを表示:
+6=Xreveal を有効化/無効化:
+7=ISO ファイルでリッピング:
+8=フォルダーにリッピング:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=HD DVD のサポートを有効化(&E)
 4=ファーストプレイタイトルを削除
 5=UOP の削除 (ユーザー操作の禁止)
 6=保護者による制限を解除する
-7=KeyDB.cfgの場所
+7=KeyDB.cfg の場所
 
 [DIALOG_21]
-0=My Discs
+0=ディスク
 
 [DIALOG_22]
-1=Yes
-2=No
-3=Register
-4=No decryption keys were found in KeyDB.cfg. Do you want to evaluate the cloud decryption feature?
+1=はい
+2=いいえ
+3=登録
+4=KeyDB.cfg に復号化キーが見つかりませんでした。クラウド復号化機能を使用しますか?
 
 [DIALOG_23]
-0=Disc Information
+0=ディスクの情報
 
 [DIALOG_24]
-0=Drive Information
-3=Drive:
-4=Serial number:
-5=Vendor specific:
-6=Bus encryption capable:
+0=ドライブの情報
+3=ドライブ:
+4=シリアルナンバー:
+5=固有ベンダー:
+6=バス暗号化の対応:
 
 [DIALOG_25]
-0=Import...
+0=インポート...
 3=Please specify or drag the source keydb.db to import into <a>%s</a>.
 
 [DIALOG_26]
@@ -177,13 +177,13 @@ Author=Re*Index.(ot_inc)
 0=Sounds
 3=Play sound after opening disc
 4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+5=成功時のサウンド:
+6=エラー時のサウンド:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
+0=ダンプファイルを作成
+3=お待ちください...
+4=%s を追加中...
 5=<a>How to submit dump files?</a>
 6=The file has been successfully created.
 
@@ -225,13 +225,13 @@ Author=Re*Index.(ot_inc)
 10=C - ロシア、インド、中国、その他
 11=ディスクを開く前に尋ねる
 12=再度表示しない
-13=CD/DVD/Blu-rayドライブが見つかりません。\n\n考えられる理由:\n1.CD/DVDドライブがない\n\n2. ドライブに電源が入っていないか、接続されていない
-14=ドライバのバージョンが違います:%d.%d≠%d.%d.\n\nXrevealを再インストールしてください。
-15=必要なファイルがありません。\n\nXrevealを再起動してください。
-16=Xrevealのインストールに失敗しています。\n\n修復しますか？
-17=Xrevealを使用するためには再起動が必要です。\n\n再起動しますか？
-18=%sの動作中にXrevealは動作しません。\n\n終了させますか？
-19=Xrevealは%C:ドライブをスキャンしています。
+13=CD/DVD/Blu-ray ドライブが見つかりません。\n\n考えられる理由:\n1.CD/DVD ドライブがない\n\n2.ドライブに電源が入っていないか、接続されていない
+14=ドライバのバージョンが違います:%d.%d≠%d.%d.\n\nXreveal を再インストールしてください。
+15=必要なファイルがありません。\n\nXreveal を再起動してください。
+16=Xreveal のインストールに失敗しています。\n\n修復しますか？
+17=Xreveal を使用するためには再起動が必要です。\n\n再起動しますか？
+18=%sの動作中に Xreveal は動作しません。\n\n終了させますか？
+19=Xreveal は %C:ドライブをスキャン中です。
 20=ディスクはまもなく利用できます。お待ちください…
 21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
 22=Directory '%s' has not enough space!\nYou need an additional %s.
@@ -253,13 +253,13 @@ Author=Re*Index.(ot_inc)
 38=%C:
 39=%C:\[%S]
 40=情報(&S)
-41=&Open in Explorer
-42=&Create Dump File
+41=エクスプローラーを開く(&O)
+42=ダンプファイルを作成(&C)
 43=フィックスアップテーブルを表示(&S)
 44=ハードディスクにリッピング(&H)
 45=イメージファイルにリッピング(&I)
-46=Xrevealを有効化(&E)
-47=Xrevealを無効化(&D)
+46=Xreveal を有効化(&E)
+47=Xreveal を無効化(&D)
 48=設定(&S)
 49=フィードバック(&F)
 50=ツール(&T)
@@ -287,39 +287,39 @@ Author=Re*Index.(ot_inc)
 72=ディスクなし
 73=すべてのオプションをデフォルト値にリセットしますか?\n\n「いいえ」をクリックすると、現在のページのオプションがリセットされるだけです。
 74=RowId
-75=Status
-76=Label
-77=Type
-78=Capacity
-79=Date
-80=Disc ID
+75=状態
+76=ラベル
+77=タイプ
+78=容量
+79=日付
+80=ディスク ID
 81=Date added
 82=MKB
-83=Main playlist
-84=BD+ date
+83=メインプレイリスト
+84=BD+ の日付
 85=
 86=VID
 87=MK
 88=VUK
 89=UK
-90=&View
+90=表示(&V)
 91=&Delete "%s"
-92=Delete &All
+92=すべて削除(&A)
 93=Are you sure you want to delete "%s"?
 94=Are you sure you want to delete all records?
 95=This feature is only available in the <a>Pro version</a>.
 96=更新(&R)
-97=&Edit
-98=&Import...
+97=編集(&E)
+98=インポート(&I)...
 99=&Reveal keydb.db in Explorer
-100=Comment
+100=コメント
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
 104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
+105=%s (ドライブ: %s)
+106=ログフォルダーを開く
+107=オプション
 108=Verbose output
 109=Command line version (Windows/macOS/Linux)
 110=Abort
@@ -328,28 +328,28 @@ Author=Re*Index.(ot_inc)
 113=When done: 
 114=Do nothing
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
+116=ディスクを取り出し
+117=サウンドを再生
+118=Xreveal を終了
+119=アクションなし
+120=シャットダウン
+121=スリープ
+122=休止
+123=システムをロック
+124=ログオフ
+125=すべてのファイル
+126=ISO ファイル
+127=WAV ファイル
+128=KeyDB ファイル
+129=データベースファイル
 130=Select or drop the WAV file here
 131=Select or drop the KeyDB.cfg here
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
 135=Abort request acknowledged
-136=Copying...
-137=Pro feature
-138=Update license
+136=コピー中...
+137=Pro の機能
+138=ライセンスを更新
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
