--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -46,7 +46,7 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_9]
 0=CD
-3=CD-DA プロテクトを解除
+3=CD-DA のプロテクトを解除
 
 [DIALOG_10]
 0=DVD
@@ -113,8 +113,8 @@ Author=Re*Index.(ot_inc)
 4=保存先:
 6=経過時間:
 7=残り時間:
-8=リードエラー:
-9=リードレート:
+8=読み取りエラー:
+9=読み取りレート:
 
 [DIALOG_16]
 0=プレーヤーのリージョン
@@ -154,7 +154,7 @@ Author=Re*Index.(ot_inc)
 1=はい
 2=いいえ
 3=登録
-4=KeyDB.cfg に復号化キーが見つかりませんでした。クラウド復号化機能を使用しますか?
+4=KeyDB.cfg に復号化キーがありませんでした。クラウド復号化機能を使用しますか？
 
 [DIALOG_23]
 0=ディスクの情報
@@ -168,15 +168,15 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_25]
 0=インポート...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+3=<a>%s</a> にインポートするソースの keydb.db を指定するか、ドラッグをしてください。
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=コンテンツハッシュを検証
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
+0=サウンド
+3=ディスクを開いた後にサウンドを再生する
+4=ディスクのリッピング後にサウンドを再生する
 5=成功時のサウンド:
 6=エラー時のサウンド:
 
@@ -184,31 +184,31 @@ Author=Re*Index.(ot_inc)
 0=ダンプファイルを作成
 3=お待ちください...
 4=%s を追加中...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+5=<a>ダンプファイルの提出方法は？</a>
+6=ファイルが正常に作成されました。
 
 [DIALOG_A]
 0=ソフトウェアアップデート
-3=%sの最新バージョンが利用可能です
-4=%sが利用可能です。現在:%s ダウンロードしますか？
+3=%s の最新バージョンが利用可能です
+4=%s が利用可能です。現在:%s ダウンロードをしますか？
 5=更新履歴:
 6=スキップ
 7=後で
 8=インストール
-9=%s 中 %sをダウンロード中
-10=あなたは最新バージョンのソフトウェアを利用しています。\n\n%sの新しいバージョンが利用可能です。
+9=%s 中 %s をダウンロード中
+10=あなたは最新バージョンのソフトウェアを使用しています。\n\n%s の新しいバージョンが利用可能です。
 11=アップデート情報の取得に失敗しました。もう一度お試しください。
 12=アップデートのダウンロードに失敗しました。もう一度お試しください。
 
 [DIALOG_B]
 1=送信
-3=申し訳ありません。%sは問題が発生したため強制終了しました。
-4=エラーレポートを送信し、このソフトウェアの改善に協力してください。
+3=申し訳ありません。%s は問題が発生したため強制終了しました。
+4=エラーレポートを送信して、このソフトウェアの改善に協力してください。
 
 [DIALOG_C]
 0=フィードバック
 1=送信
-3=メールアドレス(任意)
+3=メールアドレス (任意)
 4=バグ、問題の説明
 
 [STRING]
@@ -226,21 +226,21 @@ Author=Re*Index.(ot_inc)
 11=ディスクを開く前に尋ねる
 12=再度表示しない
 13=CD/DVD/Blu-ray ドライブが見つかりません。\n\n考えられる理由:\n1.CD/DVD ドライブがない\n\n2.ドライブに電源が入っていないか、接続されていない
-14=ドライバのバージョンが違います:%d.%d≠%d.%d.\n\nXreveal を再インストールしてください。
+14=ドライバーのバージョンが違います:%d.%d≠%d.%d.\n\nXreveal を再インストールしてください。
 15=必要なファイルがありません。\n\nXreveal を再起動してください。
 16=Xreveal のインストールに失敗しています。\n\n修復しますか？
 17=Xreveal を使用するためには再起動が必要です。\n\n再起動しますか？
 18=%sの動作中に Xreveal は動作しません。\n\n終了させますか？
 19=Xreveal は %C:ドライブをスキャン中です。
 20=ディスクはまもなく利用できます。お待ちください…
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
-23=%sをコピー中
+21=Xreveal はドライブ %C: でアクティブになっていません！\n\nコピープロテクトされたディスクをリッピングするには、ドライブに対して Xreveal がアクティブになっている必要があります。
+22=｢%s｣のディレクトリに必要な空き容量がありません！\n%s の容量が追加で必要です。
+23=%s をコピー中
 24=%.1f MB/s
-25=Operation successfully completed!
+25=操作は正常に完了しました！
 26={%s} に復号化キーが見つかりません
 27=BD+ FUT が見つかりません
-28=Xreveal failed to open disc, error code: %s.
+28=Xreveal はディスクを開けませんでした。エラーコード: %s
 29=ドライブ
 30=ベンダー
 31=製品
@@ -272,28 +272,28 @@ Author=Re*Index.(ot_inc)
 57=このプログラムはフリーウェアです。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして改善に役立ててください。
 58=%sはすでに存在します。\n置き換えますか？
 59=本当にキャンセルしますか？
-60=Your license expired on %s.
+60=ライセンスは %s に期限切れになりました。
 61=プレーヤー
 62=リージョンコード
 63=残り時間
 64=リージョン %C
 65=常に手前に表示(&S)
 66=購入(&P)
-67=ライセンス対象: %s\r\n最大ユーザー数: %d\r\n無料アップデートまで: %s
+67=ライセンス対象: %s\r\n最大ユーザー数: %d\r\n無料アップデート: %s
 68=常に
 69=登録(&R)...
-70=ご登録ありがとうございます!
+70=ご登録ありがとうございます！
 71=入力したキーは正しくありません。
 72=ディスクなし
-73=すべてのオプションをデフォルト値にリセットしますか?\n\n「いいえ」をクリックすると、現在のページのオプションがリセットされるだけです。
-74=RowId
+73=すべてのオプションを既定値にリセットしますか？\n\n「いいえ」をクリックすると、現在のページのオプションがリセットされるだけです。
+74=RowID
 75=状態
 76=ラベル
 77=タイプ
 78=容量
 79=日付
 80=ディスク ID
-81=Date added
+81=日付の追加日
 82=MKB
 83=メインプレイリスト
 84=BD+ の日付
@@ -303,30 +303,30 @@ Author=Re*Index.(ot_inc)
 88=VUK
 89=UK
 90=表示(&V)
-91=&Delete "%s"
+91=｢%s｣を削除(&D)
 92=すべて削除(&A)
-93=Are you sure you want to delete "%s"?
-94=Are you sure you want to delete all records?
-95=This feature is only available in the <a>Pro version</a>.
+93=｢%s｣を削除してもよろしいですか？
+94=すべてのレコードを削除してもよろしいですか？
+95=この機能は <a>Pro バージョン</a>でのみ利用できます。
 96=更新(&R)
 97=編集(&E)
 98=インポート(&I)...
-99=&Reveal keydb.db in Explorer
+99=エクスプローラーで Reveal keydb.db を表示(&R)
 100=コメント
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
+101=ISO を検証する
+102=フォルダーを検証する
+103=ドライブを検証する
+104=バス暗号化に対応
 105=%s (ドライブ: %s)
 106=ログフォルダーを開く
 107=オプション
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+108=詳細で出力
+109=コマンドラインバージョン (Windows/macOS/Linux)
+110=中止
+111=ベンダー固有
+112=｢%s｣のディレクトリは存在しません。作成しますか？
+113=完了後: 
+114=何もしない
 115=, 
 116=ディスクを取り出し
 117=サウンドを再生
@@ -342,14 +342,14 @@ Author=Re*Index.(ot_inc)
 127=WAV ファイル
 128=KeyDB ファイル
 129=データベースファイル
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+130=WAV ファイルを選択またはドロップします
+131=KeyDB.cfg を選択またはドロップします
+132=%u%% 完了
+133=ドライブ %C: の読み取りエラーです！\nセクター: %u-%u
+134=%s の読み取り中にエラーが発生しました！\nセクター: %u-%u
+135=処理の中止を承認しました
 136=コピー中...
 137=Pro の機能
 138=ライセンスを更新
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+139=保護されたイメージファイルを作成します。ファイルは、Xreveal がインストールと実行がされている場合でのみ仮想ドライブから読み取ることができます！\n\n続行しますか？
+140=未完了のファイルを削除しますか？\n\n%s
