--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -137,7 +137,7 @@ Author=Re*Index.(ot_inc)
 5=設定ウィンドウを表示:
 6=Xreveal を有効化/無効化:
 7=ISO ファイルでリッピング:
-8=フォルダーにリッピング:
+8=フォルダーでリッピング:
 
 [DIALOG_20]
 0=HD DVD
