update indonesian translation

--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -42,7 +42,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=&Daftar drive di sistem menu baki
 7=&Periksa untuk pembaruan otomatis
 8=<a>Periksa sekarang</a>
-9=Automatically &report open failures to improve Xreveal
+9=Otomatis membuka &laporan gagal untuk meningkatkan Xreveal
 
 [DIALOG_9]
 0=CD
@@ -50,7 +50,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=&Aktifkan dukungan DVD
 4=Hapus &RC (Region Code)
 5=Hapus RC&E (Region Code Enhancement)
 6=kode negara &Disk:
@@ -69,51 +69,51 @@ Author= Lieba Natur Brilian (naturbrilian)
 8=Hapus &UOPs (User Operation Prohibitions)
 9=Hapus &CCI (Copy Control Information)
 10=Nonaktifkan BD-&Live
-11=&Simulate connected 3D display
+11=&Simulasikan sambungan tampilan 3D
 12=Namai ulang folder
 13=Gunakan akselerasi perangkat keras &AES
 14=<a>Benchmark</a>
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal doesn't contain any decryption keys, you'll need a key database to make it work. <a>For more details</a>.
+3=Xreveal tidak berisi kunci decrypt apa pun, Anda memerlukan database kunci agar dapat berfungsi. <a>Untuk keterangan lebih lanjut</a>.
 4=lokasi KeyDB.cfg
 5=Lokasi FUT
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Cari key Daring
+7=Versi pro mendukung penghapusan proteksi bd+ dengan <a>bd+.dll</a>.
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=Drive Saya
+3=&Pilih drive yang ingin anda pindai oleh Xreveal.
 5=&Nonaktifkan AutoRun dan AutoPlay
 8=Aktifkan &LibreDrive untuk UHD
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
+1=Mulai
+3=Sumber
+4=Destinasi
+5=Opsi
 6=Info
-7=Type:
-8=Capacity:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=&Verify content hash
-14=Create &md5 checksum file
-15=Create &dvdid.xml
-16=Create log file
+7=Tipe:
+8=Kapasitas:
+9=Proteksi:
+10=Sisa penyimpanan:
+11=Kapasitas:
+12=&Tetap lindungi
+13=&Verifikasi konten hash
+14=Buat checksum berkas &md5
+15=Buat &dvdid.xml
+16=Buat berkas log
 17=RTF
 18=TXT
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
+3=Sumber:
+4=Destinasi:
 6=Time elapsed:
 7=Time remaining:
-8=Read errors:
+8=Baca kesalahan:
 9=Read rate:
 
 [DIALOG_16]
@@ -132,16 +132,16 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_19]
 0=Tombol Pintasan
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
+3=Anda bisa membuat pintasan system-wide untuk memancing beberapa tindakan ketika Xreveal berjalan.
+4=Tampilkan Xreveal di menu baki sistem:
+5=Tampilkan jendela pengaturan:
+6=Aktifkan/Nonaktifkan Xreveal:
+7=Rip ke berkas ISO:
+8=Rip ke folder:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Aktifkan dukungan HD DVD
 4=Hapus judul &pertama kali yang diputar
 5=Hapus &UOPs (User Operation Prohibitions)
 6=Hapus pembatasan &orang tua
@@ -157,35 +157,35 @@ Author= Lieba Natur Brilian (naturbrilian)
 4=Tidak ada key decryption yang ditemukan di KeyDB.cfg, Anda ingin untuk mengevaluasi fitur decryption awan?
 
 [DIALOG_23]
-0=Disc Information
+0=Informasi Disc
 
 [DIALOG_24]
-0=Drive Information
+0=Informasi Drive
 3=Drive:
-4=Serial number:
-5=Vendor specific:
+4=Nomer serial:
+5=Spesifikasi vendor:
 6=Bus encryption capable:
 
 [DIALOG_25]
-0=Import...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+0=Impor...
+3=Silahkan spesifikasikan atau tarik keydb.db sumber untuk mengimpor ke <a>%s</a>.
 
 [DIALOG_26]
 0=Content Hash Verifier
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Suara
+3=Memutar suara setelah membuka disc
+4=Memutar suara setelah ripping disc
+5=Suara sukses:
+6=Suara kesalahan:
 
 [DIALOG_28]
-0=Create Dump File
-3=Please wait...
-4=Adding %s...
-5=<a>How to submit dump files?</a>
-6=The file has been successfully created.
+0=Buat Berkas Dump
+3=Silahkan tunggu...
+4=Menambahkan %s...
+5=<a>Cara untuk submit berkas dump?</a>
+6=Berkas berhasil dibuat.
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -225,19 +225,19 @@ Author= Lieba Natur Brilian (naturbrilian)
 10=C - Russia, India, China, the rest of world
 11=Tanya sebelum membuka disk
 12=Jangan tampilkan lagi
-13=No CD/DVD/Blu-ray drive detected!\n\nPossible reasons:\n1. You don't have a CD/DVD/Blu-ray drive.\n\n2. The drive is not powered on or is not properly connected.
+13=Tidak ada CD/DVD/Blu-ray drive terdeteksi!\n\nAlasan kemungkinan:\n1. Anda tidak memiliki drive CD/DVD/Blu-ray.\n\n2. Drive tidak menyala atau tidak terhubung dengan benar.
 14=Versi driver tidak sesuai %d.%d≠%d.%d.\n\Silahkan instal ulang Xreveal.
 15=Beberapa berkas yang dibutuhkan hilang.\n\nSilahkan instal ulang Xreveal.
 16=Xreveal gagal dipasang.\n\nApakah anda ingin memperbaikinya?
 17=Anda harus memulai ulang komputer anda untuk menggunakan Xreveal.\n\nApakah anda ingin memulai ulang sekarang?
-18=Xreveal will not work if %s is running.\n\nDo you want to close it?
+18=Xreveal tidak akan bekerja jika %s berjalan.\n\nAnda ingin menutupnya?
 19=Xreveal memindai drive %C:
 20=Disk yang anda masukkan akan segera tersedia, silahkan tunggu!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal tidak diaktifkan untuk drive %C:!\n\nUntuk menyalin drive yang dilindungi salinan, Xreveal harus diaktifkan pada drive tersebut.
+22=Direktori '%s' tidak memiliki ruang yang cukup!\nAnda harus butuh tambahan %s.
 23=Menyalin %s. . .
 24=%.1f MB/s
-25=Operation successfully completed!
+25=Operasi selesai!
 26=Tidak ada key decrypt yang ditemukan di {%s}
 27=Tidak ada FUT BD+ yang ditemukan
 28=Xreveal gagal untuk membuka disk, kode kesalahan: %s
@@ -253,8 +253,8 @@ Author= Lieba Natur Brilian (naturbrilian)
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Open in Explorer
-42=&Create Dump File
+41=&Buka di Explorer
+42=&Buat Berkas Dump
 43=&Dump BD+ FUT
 44=Rip ke &Folder...
 45=Rip ke berkas &ISO...
@@ -272,10 +272,10 @@ Author= Lieba Natur Brilian (naturbrilian)
 57=Anda menggunakan versi gratis, <a>tingkatkan ke Pro</a> untuk membuka fitur ekstra.
 58=%s sudah ada.\nAnda ingin menimpanya?
 59=Apakah anda yakin ingin membatalkan?
-60=Your license expired on %s.
+60=Lisensi anda kadaluarsa pada %s.
 61=Pemutar
 62=Negara
-63=Changes remaining
+63=Ubah tersisa
 64=Negara %C
 65=&Tetap di atas
 66=&Beli
@@ -283,9 +283,9 @@ Author= Lieba Natur Brilian (naturbrilian)
 68=Selamanya
 69=&Daftar...
 70=Terima kasih sudah mendaftar!
-71=The registration key you entered is not valid.
-72=No Disc
-73=Reset ALL the options to their default values?\n\nClicking 'No' will just reset current page options.
+71=Kunci registrasi yang anda masukkan tidak valid.
+72=Tidak ada Disc
+73=Kembalikan SEMUA opsi ke value default?\n\nMengklik 'Tidak' hanya akan mengembalikan ke opsi halaman saat ini.
 74=RowId
 75=Status
 76=Label
@@ -309,47 +309,47 @@ Author= Lieba Natur Brilian (naturbrilian)
 94=Apakah anda yakin ingin menghapus semua rekaman?
 95=Fitur ini hanya tersedia di <a>Versi pro</a>.
 96=&Segarkan
-97=&Edit
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
+97=&Sunting
+98=&Impor...
+99=&Keydb.db Reveal di Explorer
+100=Komentar
+101=Verifikasikan ISO
+102=Verifikasikan Folder
+103=Verifikasikan Drive
 104=Bus Encryption Capable
 105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
+106=Buka Folder Log
+107=Opsi
 108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+109=Versi command line (Windows/macOS/Linux)
+110=Dibatalkan
+111=Spesifikasi Vendor
+112=Direktori %s tidak ditemukan. Apakah anda ingin membuatnya?
+113=Ketika selesai: 
+114=Tidak ada
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
+116=Keluarkan disc
+117=Putar suara
+118=Keluar Xreveal
+119=Tidak ada tindakan
+120=Matikan
+121=Tidur
+122=Hibernasi
+123=Kunci sistem
+124=Keluar
+125=Semua Berkas
+126=Berkas ISO
+127=Berkas WAV
+128=Berkas KeyDB
+129=Berkas Database
+130=Pilih atau drop berkas WAV disini
+131=Pilih atau drop KeyDB.cfg disini
+132=%u%% selesai
+133=Masalah pembacaan dari drive %C:!\nSektor: %u-%u
+134=Masalah pembacaan %s!\nSektor: %u-%u
 135=Abort request acknowledged
-136=Copying...
-137=Pro feature
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+136=Menyalin...
+137=Fitur pro
+138=Perbarui lisensi
+139=Anda segera membuat berkas image terproteksi. Berkas hanya bisa dibaca dari drive virtual, jika Xreveal terpasang dan berjalan!\n\nApakah anda ingin melanjutkan?
+140=Hapus berkas yang tidak selesai?\n\n%s
