--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.6.9
+Version=2.7.0
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -103,7 +103,7 @@ Author=jekovcar
 13=&Провери хеша на съдържанието
 14=Създай &md5 файл с контролна сума
 15=Създай &dvdid.xml
-16=Create log file
+16=Създай лог файл
 17=RTF
 18=TXT
 
@@ -350,6 +350,6 @@ Author=jekovcar
 135=Заявката за прекъсване е потвърдена
 136=Копиране...
 137=Про функция
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+138=Актуализирайте лиценза
+139=Ще създаде защитен имидж файл. Файлът може да бъде четен само от виртуален диск, ако Xreveal е инсталиран и работи!\n\nДа продължи?
+140=Да изтрие непълния файл?\n\n%s
