--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.6.9
+Version=2.7.0
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -103,7 +103,7 @@ Author=jekovcar
 13=&Проверить хеш контента
 14=Создать файл контрольной суммы &md5
 15=Создать &dvdid.xml
-16=Create log file
+16=Создать файл журнала
 17=RTF
 18=TXT
 
@@ -350,6 +350,6 @@ Author=jekovcar
 135=Запрос на отмену подтвержден.
 136=Копирование...
 137=Профессиональная функция
-138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
+138=Обновить лицензию
+139=Создаст защищенный файл изображения. Файл можно будет читать только с виртуального диска, если Xreveal установлен и запущен!\n\nПродолжить?
+140=Удалить неполный файл?\n\n%s
