--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.9.6
+Version=2.7.0.4
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -324,7 +324,7 @@ Author=The Punisher
 109=Eingabeaufforderungsversion (Windows/macOS/Linux)
 110=Abbrechen
 111=Herstellerspezifisch
-112=Verzeichnis %s exitiert nicht. Soll es erstellt werden ?
+112=Verzeichnis %s existiert nicht. Soll es erstellt werden ?
 113=Wenn fertig: 
 114=Nichts tun
 115=, 
@@ -351,5 +351,5 @@ Author=The Punisher
 136=Kopieren...
 137=Pro Ausstattungsmerkmal
 138=Lizenz erweitern
-139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann nur auf einem virtuellen Laufwerk gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
+139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann auf einem virtuellen Laufwerk nur gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
 140=Unvollständige Datei löschen ?\n\n%s
