--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -78,9 +78,7 @@ Author=فتحي الداودية
 0=DB مفتاح 
 3=على أي مفتاح فك تشفير ، فأنت بحاجة إلى قاعدة بيانات أساسية لجعله يعمل Xreveal لا يحتوي. <a>اقرأ المزيد</a>.
 4=KeyDB.cfg موقع
-5=FUT موقع
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=فتحي الداودية
 24=%.1f MB/s
 25=Operation successfully completed!
 26=No decryption key found in {%s}
-27=No BD+ FUT found
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=محرك
 30=البائع
@@ -255,7 +253,7 @@ Author=فتحي الداودية
 40=&الحالة
 41=&Open in Explorer
 42=&Create Dump File
-43=& BD+ Fixup Table اظهار
+43=
 44=النسخ إلى &القرص الصلب...
 45=النسخ إلى &صورة...
 46=& Xreveal تمكين
@@ -311,7 +309,7 @@ Author=فتحي الداودية
 96=&Refresh
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
