--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.7.0
+Version=2.7.1
 Author=Tanuki
 1=确定
 2=取消
@@ -78,9 +78,7 @@ Author=Tanuki
 0=KeyDB
 3=Xreveal 不包含任何解密密钥，你需要密钥库才能使其工作，<a>了解更多</a>。
 4=KeyDB.cfg 路径
-5=FUT 路径
 6=在线查找密钥(&F)
-7=专业版支持用 <a>bd+.dll</a> 移除 BD+ 保护.
 
 [DIALOG_13]
 0=我的光驱
@@ -154,7 +152,7 @@ Author=Tanuki
 1=是
 2=否
 3=注册
-4=在 KeyDB.cfg 中未找到可用的解密密钥。是否试用在线查找密钥功能？
+4=在 KeyDB.cfg 中未找到密钥，是否在线查找密钥？
 
 [DIALOG_23]
 0=碟片信息
@@ -239,7 +237,7 @@ Author=Tanuki
 24=%.1f MB/s
 25=操作成功完成！
 26=在{%s}中没找到解密此光碟的密钥
-27=未找到 BD+ FUT
+27=
 28=Xreveal 无法打开光碟, 错误码: %s.
 29=光驱
 30=厂商
@@ -255,7 +253,7 @@ Author=Tanuki
 40=状态(&S)
 41=在资源管理器中打开(&O)
 42=生成&Dump文件
-43=显示 BD+ 修复表(&S)
+43=
 44=复制到硬盘...
 45=复制到映像...
 46=启用 Xreveal(&E)
@@ -311,7 +309,7 @@ Author=Tanuki
 96=刷新(&R)
 97=编辑(&E)
 98=导入(&I)...
-99=定位 keydb.db(&R)
+99=
 100=注释
 101=验证镜像文件
 102=验证文件夹
