--- a/Xreveal_CHT.ini
+++ b/Xreveal_CHT.ini
@@ -78,9 +78,7 @@ Author=
 0=密鑰資料庫
 3=Xreveal 不包含任何解密金鑰，您需要一個金鑰資料庫才能使其運作。 <a>了解更多詳情</a>。
 4=KeyDB.cfg 位置
-5=FUT 位置
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=
 24=%.1f MB/s
 25=Operation successfully completed!
 26=在 {%s} 中找不到解密金鑰
-27=未找到 BD+ FUT
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=駕駛
 30=供應商
@@ -255,7 +253,7 @@ Author=
 40=狀態(&S)
 41=&Open in Explorer
 42=&Create Dump File
-43=轉儲 BD+ FUT(&D)
+43=
 44=Rip to &Folder...
 45=Rip to &ISO file...
 46=啟用Xreveal(&E)
@@ -311,7 +309,7 @@ Author=
 96=&Refresh
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
