--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.0
+Version=2.7.1
 Author=
 1=OK
 2=Cancel
@@ -78,9 +78,7 @@ Author=
 0=KeyDB
 3=Xreveal doesn't contain any decryption keys, you'll need a <a>key database</a> to make it work.
 4=KeyDB.cfg location
-5=FUT location
-6=&Find key online
-7=The Pro version supports removing BD+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -154,7 +152,7 @@ Author=
 1=Yes
 2=No
 3=Register
-4=The disc key was not found in KeyDB.cfg. Would you like to try the "Find Key Online" Pro feature?
+4=The disc key was not found in KeyDB.cfg. Do you want to search it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -239,7 +237,7 @@ Author=
 24=%.1f MB/s
 25=Operation successfully completed!
 26=The disc key not found! {%s}
-27=The BD+ FUT not found!
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=Drive
 30=Vendor
@@ -255,7 +253,7 @@ Author=
 40=&Status
 41=&Open in Explorer
 42=&Create Dump File
-43=&Dump BD+ FUT
+43=
 44=Rip to &Folder...
 45=Rip to &ISO file...
 46=&Enable Xreveal
@@ -311,7 +309,7 @@ Author=
 96=&Refresh
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
