--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -78,9 +78,7 @@ Author=TJL
 0=KeyDB
 3=Xreveal ei sisällä salauksenpurkuavainta, joten tarvitset avaintietokannan. <a>Lue lisää</a>.
 4=KeyDB.cfg sijainti
-5=BD+-korjaustaulukoiden (FUT) sijainti
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=TJL
 24=%.1f MB/s
 25=Operation successfully completed!
 26=Salauksenpurkuavainta ei löytynyt kohteesta {%s}
-27=BD+ FUT:ta ei löytynyt
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=Levyasema
 30=Valmistaja
@@ -255,7 +253,7 @@ Author=TJL
 40=&Tila
 41=&Open in Explorer
 42=&Create Dump File
-43=&Näytä BD+ -korjaustaulukko
+43=
 44=Kopioi &kiintolevylle...
 45=Kopioi &levykuvaan...
 46=&Ota Xreveal käyttöön
@@ -311,7 +309,7 @@ Author=TJL
 96=Päivitä
 97=Muokkaa
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
