--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -78,9 +78,7 @@ Author=bovirus (bovirus@gmail.com)
 0=KeyDB
 3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un database di chiavi. <a>Maggiori info</a>.
 4=Percorso file KeyDB.cfg
-5=Percorso file FUT (tavella correzioni) BD+
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=Mie unità
@@ -239,7 +237,7 @@ Author=bovirus (bovirus@gmail.com)
 24=%.1f MB/s
 25=Operation successfully completed!
 26=La chiave del disco non è stata trovata in {%s}
-27=BD+ FUT non trovata
+27=
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
 29=Unità
 30=Produttore
@@ -255,7 +253,7 @@ Author=bovirus (bovirus@gmail.com)
 40=&Stato
 41=&Open in Explorer
 42=&Create Dump File
-43=&Visualizza tabella correzione BD+
+43=
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
 46=&Abilita Xreveal
@@ -311,7 +309,7 @@ Author=bovirus (bovirus@gmail.com)
 96=Aggio&rna
 97=&Modifica
 98=&Importa...
-99=&Visualizza keydb.db in Explorer
+99=
 100=Commento
 101=Verify ISO
 102=Verify Folder
