--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -78,9 +78,7 @@ Author=Sopor
 0=KeyDB
 3=Xreveal innehåller ingen dekrypteringsnyckel, du behöver en nyckeldatabas för att få det att fungera. <a>Läs mer</a>.
 4=Plats för KeyDB.cfg
-5=Plats för fixa till-tabeller för BD+ (FUT)
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=Sopor
 24=%.1f MB/s
 25=Operation successfully completed!
 26=Ingen dekrypteringsnyckel hittades i {%s}
-27=Ingen BD+ FUT hittades
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=Enhet
 30=Leverantör
@@ -255,7 +253,7 @@ Author=Sopor
 40=&Status
 41=&Open in Explorer
 42=&Create Dump File
-43=&Visa fixa till-tabeller för BD+
+43=
 44=Kopiera till &hårddisk...
 45=Kopiera till avb&ild...
 46=Aktiv&era Xreveal
@@ -311,7 +309,7 @@ Author=Sopor
 96=Uppdatera
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
