--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -78,9 +78,7 @@ Author=Fresta
 0=KeyDB
 3=Xreveal nie zawiera żadnego klucza deszyfrującego, do jego działania potrzebna jest baza danych kluczy. <a>Czytaj więcej</a>.
 4=Lokalizacja KeyDB.cfg:
-5=Lokalizacja BD+ fixup table (FUT):
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=Fresta
 24=%.1f MB/s
 25=Operation successfully completed!
 26=Xreveal nie mógł znaleźć klucza deszyfrującego w KeyDB.cfg
-27=Xreveal nie mógł otworzyć pliku BD+ fixup table (FUT)
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=Napęd
 30=Sprzedawca
@@ -255,7 +253,7 @@ Author=Fresta
 40=&Status
 41=&Open in Explorer
 42=&Create Dump File
-43=&Dump BD+ FUT
+43=
 44=Zgraj na &Dysk Twardy...
 45=Zgraj do &Obrazu...
 46=&Włącz Xreveal
@@ -311,7 +309,7 @@ Author=Fresta
 96=&Odśwież
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
