--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -78,9 +78,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 0=KeyDB
 3=Xreveal ne vsebuje ključa za dešifriranje, za delovanje potrebujete podatkovno zbirko ključev. <a>Preberi več</a>.
 4=Lokacija KeyDB.cfg
-5=Lokacija BD+  tabel popravkov (FUT)
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 24=%.1f MB/s
 25=Operation successfully completed!
 26=V {%s} ni bilo mogoče najti ključa za dešifriranje
-27=BD+ FUT ni bil najden
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=Pogon
 30=Dobavitelj
@@ -255,7 +253,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 40=S&tanje
 41=&Open in Explorer
 42=&Create Dump File
-43=Prikaži tabelo popravkov BD+
+43=
 44=Kopiraj na trdi disk...
 45=Kopiraj v sliko ...
 46=Omogoči Xreveal
@@ -311,7 +309,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 96=Osveži
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
