--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -78,9 +78,7 @@ Author=Steven Rogers
 0=KeyDB
 3=Xreveal no contiene ninguna clave de descifrado, necesita una base de datos clave para que funcione. <a>Saber más.</a>.
 4=Ubicación de KeyDB.cfg
-5=Ubicación de BD+ fixup tables (FUT)
-6=&Find key online
-7=The Pro version supports removing bd+ protection with <a>bd+.dll</a>.
+6=&Search key online
 
 [DIALOG_13]
 0=My Drives
@@ -239,7 +237,7 @@ Author=Steven Rogers
 24=%.1f MB/s
 25=Operation successfully completed!
 26=No se encontró ninguna clave de descifrado en {%s}
-27=No se encontró BD+ FUT
+27=
 28=Xreveal failed to open disc, error code: %s.
 29=Conducir
 30=Vendedor
@@ -255,7 +253,7 @@ Author=Steven Rogers
 40=&Estado
 41=&Open in Explorer
 42=&Create Dump File
-43=&Mostrar BD+ Fixup Table
+43=
 44=Ripear &Disco duro...
 45=Ripear &Imagen...
 46=&Habilitar Xreveal
@@ -311,7 +309,7 @@ Author=Steven Rogers
 96=&Refresh
 97=&Edit
 98=&Import...
-99=&Reveal keydb.db in Explorer
+99=
 100=Comment
 101=Verify ISO
 102=Verify Folder
