--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.0
+Version=2.7.1
 Author=Andex
 1=OK
 2=Annuler
@@ -152,7 +152,7 @@ Author=Andex
 1=Oui
 2=Non
 3=Enregistrer...
-4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous évaluer la fonctionnalité de recherche de clé en ligne?
+4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous la rechercher en ligne?
 
 [DIALOG_23]
 0=Informations sur le disque
