--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Списък дискове в менюто на системната област
 7=&Автопроверка за актуализации
 8=<a>Провери сега</a>
-9=Автоматично & съобщавай отворени сривове, за подобряване на Xreveal
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author=jekovcar
 138=Актуализирайте лиценза
 139=Ще създаде защитен имидж файл. Файлът може да бъде четен само от виртуален диск, ако Xreveal е инсталиран и работи!\n\nДа продължи?
 140=Да изтрие непълния файл?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
