--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -42,7 +42,7 @@ Author=The Punisher
 6=&Laufwerke im Xreveal-Taskleistensymbol anzeigen
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
-9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author=The Punisher
 138=Lizenz erweitern
 139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann auf einem virtuellen Laufwerk nur gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
 140=Unvollständige Datei löschen ?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
