--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.7.1
+Version=2.7.2
 Author=
 1=OK
 2=Cancel
@@ -42,7 +42,7 @@ Author=
 6=&List drives in the system tray menu
 7=&Check for updates automatically
 8=<a>Check now</a>
-9=Automatically &report open failures to improve Xreveal
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -78,7 +78,7 @@ Author=
 0=KeyDB
 3=Xreveal doesn't contain any decryption keys, you'll need a <a>key database</a> to make it work.
 4=KeyDB.cfg location
-6=&Search key online
+6=&Find keys online if not found locally
 
 [DIALOG_13]
 0=My Drives
@@ -152,7 +152,7 @@ Author=
 1=Yes
 2=No
 3=Register
-4=The disc key was not found in KeyDB.cfg. Do you want to search it online?
+4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -179,7 +179,7 @@ Author=
 6=Error sound:
 
 [DIALOG_28]
-0=Create Dump File
+0=Create a Dump File
 3=Please wait...
 4=Adding %s...
 5=<a>How to submit dump files?</a>
@@ -189,19 +189,19 @@ Author=
 0=Software Update
 3=A new version of %s is available!
 4=%s is now available - you have %s. Would you like to download it now?
-5=Release Notes:
+5=Release notes:
 6=Skip This Version
 7=Remind Me Later
 8=Install Update
 9=Downloading - %s of %s
-10=You're up to date!\n\n%s is currently the newest version available.
-11=An error occurred in retrieving update information. Please try again later.
+10=You're up to date!\n\n%s is the latest version available.
+11=An error occurred by retrieving update information. Please try again later.
 12=An error occurred while downloading the update. Please try again later.
 
 [DIALOG_B]
 1=Send
-3=%s has encountered a problem and needs to close. We are sorry for the inconvenience.
-4=Please send us this error report to help fix the problem and improve this software.
+3=%s has encountered a problem, and needs to close. We are sorry for the inconvenience.
+4=Please send us this error report to help us resolve this problem, and improve this software.
 
 [DIALOG_C]
 0=Feedback
@@ -223,7 +223,7 @@ Author=
 10=C - Russia, India, China, the rest of world
 11=Ask before opening the disc
 12=Do not show again
-13=No CD/DVD/Blu-ray drive detected!\n\nPossible reasons:\n1. You don't have a CD/DVD/Blu-ray drive.\n\n2. The drive is not powered on or is not properly connected.
+13=No CD/DVD/Blu-ray drive detected!\n\nPossible reasons:\n1. You don't have a CD/DVD/Blu-ray drive.\n\n2. The drive is not powered on or it's not properly connected.
 14=Driver version mismatch %d.%d≠%d.%d.\n\nPlease reinstall Xreveal.
 15=Some of the required files are missing.\n\nPlease reinstall Xreveal.
 16=Xreveal was not successfully installed.\n\nDo you want to fix it?
@@ -235,8 +235,8 @@ Author=
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copying %s...
 24=%.1f MB/s
-25=Operation successfully completed!
-26=The disc key not found! {%s}
+25=Operation completed successfully!
+26=The disc key is not found! {%s}
 27=
 28=Xreveal failed to open disc, error code: %s.
 29=Drive
@@ -252,7 +252,7 @@ Author=
 39=%C:\[%S]
 40=&Status
 41=&Open in Explorer
-42=&Create Dump File
+42=&Create a dump file
 43=
 44=Rip to &Folder...
 45=Rip to &ISO file...
@@ -270,7 +270,7 @@ Author=
 57=You are using the free version, <a>upgrade to Pro</a> to unlock extra features.
 58=%s already exists.\nDo you want to replace it?
 59=Are you sure you want to cancel?
-60=Your license expired on %s.
+60=Your license has expired on %s.
 61=Player
 62=Region
 63=Changes remaining
@@ -281,9 +281,9 @@ Author=
 68=Forever
 69=&Register...
 70=Thanks for registering!
-71=The registration key you entered is not valid.
+71=The registration key that you have entered, is not valid.
 72=No Disc
-73=Reset ALL the options to their default values?\n\nClicking 'No' will just reset current page options.
+73=Reset ALL the options to their default values?\n\nClicking 'No' will reset the current page options.
 74=ID
 75=Status
 76=Label
@@ -345,9 +345,13 @@ Author=
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Copying...
 137=Pro feature
 138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
