--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.7.1
+Version=2.7.2
 Author=Andex
 1=OK
 2=Annuler
@@ -42,7 +42,7 @@ Author=Andex
 6=&Afficher les lecteurs dans le menu de Xreveal
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
-9=&Signaler automatiquement les codes d'erreur de lecture pour améliorer Xreveal
+9=&Mode:
 
 [DIALOG_9]
 0=CD
@@ -120,8 +120,8 @@ Author=Andex
 [DIALOG_17]
 0=Sous-titres
 3=&Transparence des sous-titres
-4=Transparent
-5=Opaque
+4=Transparent (0)
+5=Opaque (15)
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -173,10 +173,10 @@ Author=Andex
 
 [DIALOG_27]
 0=Sons
-3=Son après l'ouverture d'un disque
-4=Son après la copie d'un disque
-5=Succès:
-6=Erreur:
+3=Son après l'&ouverture d'un disque
+4=Son après la &copie d'un disque
+5=&Succès:
+6=&Erreur:
 
 [DIALOG_28]
 0=Créer un fichier d'informations
@@ -351,3 +351,7 @@ Author=Andex
 138=Mise à jour de licence
 139=Vous allez créer un fichier image protégé!\nIl pourra être lu par un lecteur virtuel seulement si Xreveal est démarré!\n\nContinuer?
 140=Supprimer le fichier incomplet?\n\n%s
+141=Clair
+142=Sombre
+143=Système
+144=(%u essais)
