--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -42,7 +42,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=&Daftar drive di sistem menu baki
 7=&Periksa untuk pembaruan otomatis
 8=<a>Periksa sekarang</a>
-9=Otomatis membuka &laporan gagal untuk meningkatkan Xreveal
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 138=Perbarui lisensi
 139=Anda segera membuat berkas image terproteksi. Berkas hanya bisa dibaca dari drive virtual, jika Xreveal terpasang dan berjalan!\n\nApakah anda ingin melanjutkan?
 140=Hapus berkas yang tidak selesai?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
