--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -42,7 +42,7 @@ Author=Re*Index.(ot_inc)
 6=システムトレイメニューにドライブを一覧で表示(&L)
 7=自動的にアップデートを確認(&C)
 8=<a>今すぐ確認</a>
-9=エラーの発生時に自動で問題を報告(&R)
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author=Re*Index.(ot_inc)
 138=ライセンスを更新
 139=保護されたイメージファイルを作成します。ファイルは、Xreveal がインストールと実行がされている場合でのみ仮想ドライブから読み取ることができます！\n\n続行しますか？
 140=未完了のファイルを削除しますか？\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
