--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -42,7 +42,7 @@ Author=فتحي الداودية
 6=&List drives in the system tray menu
 7=&التحقق من وجود تحديثات تلقائيا
 8=<a>Check now</a>
-9=Automatically &report open failures to improve Xreveal
+9=Theme:
 
 [DIALOG_9]
 0=قرص
@@ -351,3 +351,7 @@ Author=فتحي الداودية
 138=Update license
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
