--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.7.1
+Version=2.7.2
 Author=Tanuki
 1=确定
 2=取消
@@ -42,7 +42,7 @@ Author=Tanuki
 6=托盘菜单中列出光驱列表(&L)
 7=自动检查更新(&C)
 8=<a>现在检查</a>
-9=自动上报打开失败信息以改进 Xreveal(&R)
+9=主题:
 
 [DIALOG_9]
 0=音乐 CD
@@ -351,3 +351,7 @@ Author=Tanuki
 138=更新注册码
 139=你将创建一带有加密保护的镜像。此文件需加载到虚拟光驱中，然后用Xreveal解密后再使用!\n\n你要继续吗?
 140=删除未完成的文件？\n\n%s
+141=白天
+142=黑夜
+143=跟随系统
+144=(%u 次重试)
