--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -42,7 +42,7 @@ Author=bovirus (bovirus@gmail.com)
 6=&Elenca unità nel menu barra di sistema
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
-9=Segnala automaticamente e&rrori per migliorare Xreveal
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author=bovirus (bovirus@gmail.com)
 138=Update license
 139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
