--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -42,7 +42,7 @@ Author=VenusGirl (비너스걸)
 6=시스템 트레이 메뉴에 드라이브 나열(&L)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
-9=열기 실패를 자동으로 보고하여 Xreveal 개선
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author=VenusGirl (비너스걸)
 138=라이선스 업데이트
 139=보호된 이미지 파일을 생성합니다. 파일은 Xreveal이 설치되어 실행 중인 경우에만 가상 드라이브에서 읽을 수 있습니다!\n\n계속하시겠습니까?
 140=불완전한 파일을 삭제하시겠습니까?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
