--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Показать диски в меню на панели задач
 7=&Автоматическая проверка обновлений
 8=<a>Проверить сейчас</a>
-9=Автоматически &сообщать об открытых сбоях для улучшения Xreveal
+9=Theme:
 
 [DIALOG_9]
 0=CD
@@ -351,3 +351,7 @@ Author=jekovcar
 138=Обновить лицензию
 139=Создаст защищенный файл изображения. Файл можно будет читать только с виртуального диска, если Xreveal установлен и запущен!\n\nПродолжить?
 140=Удалить неполный файл?\n\n%s
+141=Light
+142=Dark
+143=System
+144=(%u retries)
