--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.7.0.4
+Version=2.7.2
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -351,7 +351,7 @@ Author=The Punisher
 138=Lizenz erweitern
 139=Dieser Schritt erzeugt eine geschützte Image-Datei. Diese Datei kann auf einem virtuellen Laufwerk nur gelesen werden, wenn Xreveal installiert und gestartet ist !\n\nFortfahren ?
 140=Unvollständige Datei löschen ?\n\n%s
-141=Light
-142=Dark
+141=Hell
+142=Dunkel
 143=System
-144=(%u retries)
+144=(%u Versuche)
