--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -42,7 +42,7 @@ Author=Re*Index.(ot_inc)
 6=システムトレイメニューにドライブを一覧で表示(&L)
 7=自動的にアップデートを確認(&C)
 8=<a>今すぐ確認</a>
-9=Theme:
+9=テーマ:
 
 [DIALOG_9]
 0=CD
@@ -60,7 +60,7 @@ Author=Re*Index.(ot_inc)
 11=Xreveal で DVD を開くには <a>libdvdcss-2.dll</a> が必要です。
 
 [DIALOG_11]
-0=Blu-ray
+0=BD & UHD
 3=Blu-ray のサポートを有効化(&E)
 4=BD+ の解除
 5=Blu-ray 地域コードを削除
@@ -242,7 +242,7 @@ Author=Re*Index.(ot_inc)
 29=ドライブ
 30=ベンダー
 31=製品
-32=リビジョン
+32=バージョン
 33=特定
 34=シリアルナンバー
 35=なし
@@ -255,7 +255,7 @@ Author=Re*Index.(ot_inc)
 42=ダンプファイルを作成(&C)
 43=
 44=ハードディスクにリッピング(&H)
-45=イメージファイルにリッピング(&I)
+45=ISOファイルにリッピング(&I)
 46=Xreveal を有効化(&E)
 47=Xreveal を無効化(&D)
 48=設定(&S)
@@ -267,7 +267,7 @@ Author=Re*Index.(ot_inc)
 54=読み込み(&L)
 55=プロパティ(&P)
 56=なし
-57=このプログラムはフリーウェアです。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして改善に役立ててください。
+57=このプログラムはフリー版です。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして改善に役立ててください。
 58=%sはすでに存在します。\n置き換えますか？
 59=本当にキャンセルしますか？
 60=ライセンスは %s に期限切れになりました。
@@ -291,7 +291,7 @@ Author=Re*Index.(ot_inc)
 78=容量
 79=日付
 80=ディスク ID
-81=日付の追加日
+81=追加日
 82=MKB
 83=メインプレイリスト
 84=BD+ の日付
