--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -355,5 +355,5 @@ Author=Andex
 142=Sombre
 143=Système
 144=(%u essais)
-145=Pause the operation
-146=Resume the operation
+145=Mettre la copie en pause
+146=Continuer la copie...
