--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.7.0
+Version=2.7.2
 Author=VenusGirl (비너스걸)
 1=확인
 2=취소
@@ -351,9 +351,9 @@ Author=VenusGirl (비너스걸)
 138=라이선스 업데이트
 139=보호된 이미지 파일을 생성합니다. 파일은 Xreveal이 설치되어 실행 중인 경우에만 가상 드라이브에서 읽을 수 있습니다!\n\n계속하시겠습니까?
 140=불완전한 파일을 삭제하시겠습니까?\n\n%s
-141=Light
-142=Dark
-143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
+141=밝은
+142=어두은
+143=시스템
+144=(%u 재시도)
+145=작업 일시 중지
+146=작업 재개
